--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ packages = [
 
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.8"
+msgpack = ">=1.1.0,<1.2.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.790.0"
@@ -21,7 +22,7 @@ ipython = "^7.19"
 flake8 = "^3.8"
 msgpack = "^1.0"
 isort = "^5.6"
-black = {version = "^18.3-alpha.0",allows-prereleases = true}
+black = {version = "^18.3-alpha.0",allow-prereleases = true}
 
 [build-system]
 requires = ["poetry>=0.12"]
