--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,12 +15,12 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.8"
 msgpack = ">=1.1.0,<1.2.0"
+typing-extensions = '>=4.6.0'
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.790.0"
 ipython = "^7.19"
 flake8 = "^3.8"
-msgpack = "^1.0"
 isort = "^5.6"
 black = {version = "^18.3-alpha.0",allow-prereleases = true}
 
